Prevent configure item dropdown links from jumping to second line when container was too tight.

--- a/src/css/builder/sections/sections.css
+++ b/src/css/builder/sections/sections.css
@@ -456,6 +456,7 @@
 	padding: 3px 25px 3px 10px;
 	color: rgba(240, 245, 250, 0.7);
 	text-decoration: none;
+	white-space: nowrap;
 }
 .configure-item-dropdown li a:before {
 	position: relative;
